--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 	"license": "GPL-3.0",
 	"private": false,
 	"devDependencies": {
-		"ts-loader": "^8.0.11",
-		"typescript": "^4.1.2",
+		"@babel/core": "^7.12.9",
+		"@babel/preset-env": "^7.12.7",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.2.2",
+		"babel-preset-env": "^1.7.0",
+		"terser-webpack-plugin": "^5.0.3",
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0"
 	}
